--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "bugs": {
     "url": "https://github.com/Ebisu-cmd/myFlix-MERN-client/issues"
   },
-  "homepage": "https://github.com/Ebisu-cmd/myFlix-MERN-client#readme"
+  "homepage": "https://github.com/Ebisu-cmd/myFlix-MERN-client#readme",
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0"
+  }
 }
